--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-tutorial",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://fakestoreapi.com",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,6 +13,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
